@@ -168,7 +168,8 @@ suite = unittest.TestLoader().loadTestsFromNames(
      'tests.test_rfc9189.suite',
      'tests.test_rfc9215.suite',
      'tests.test_rfc9286.suite',
-     'tests.test_rfc9289.suite']
+     'tests.test_rfc9289.suite',
+     'tests.test_rfc9323.suite']
 )
 
 
