@@ -9,6 +9,7 @@ Revision 0.4.2, released XX-XX-2022
   RFC7914, and RFC8692
 - Added RFC9289 providing Extended Key Usage values for RPC over TLS
 - Modified RFC9286 to apply https://www.rfc-editor.org/errata/eid7118
+- Added RFC9323 providing RPKI Signed Checklist (RSC)
 
 Revision 0.4.1, released 16-02-2022
 -----------------------------------
